--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
     <script>
         const devices = [
-            { state: "1", itemId: "0", color: "255,255,255", name: "Living room light" },
-            { state: "0", itemId: "1", color: "255,255,255", name: "Kitchen light" },
-            { state: "1", itemId: "2", color: "255,255,255", name: "Front door lights" },
-            { state: "0", itemId: "3", color: "255,255,255", name: "Garden lights" },
+            { state: "1", itemId: "0", color: "255,255,255,255", name: "Living room light" },
+            { state: "0", itemId: "1", color: "255,255,255,255", name: "Kitchen light" },
+            { state: "1", itemId: "2", color: "255,255,255,255", name: "Front door lights" },
+            { state: "0", itemId: "3", color: "255,255,255,255", name: "Garden lights" },
         ];
         const devicesContainer = document.getElementById("devices").querySelector("ul");
         const canvasHolder = document.getElementById("colors");
@@ -174,6 +174,7 @@
             console.log(data[2]);
             console.log(data[3]);
             currentColor.style.backgroundColor =  "rgb(" + data[0] + "," + data[1] + "," + data[2] + "," + data[3] + ")";
+            devicesContainer.querySelector("li[data-active='1']").setAttribute("item-color", + data[0] + "," + data[1] + "," + data[2] + "," + data[3]);
 
         }
 
