--- a/index.html
+++ b/index.html
@@ -179,10 +179,6 @@
         }
 
 
-
-
-
-
         var canvas = document.createElement('canvas');
         var context = canvas.getContext("2d");
         canvas.id = "canvas_id";
@@ -205,7 +201,11 @@
         canvas.addEventListener('click', sendColor);
         let att = document.createAttribute("onmousemove");
         att.value = "getPos(event)";
-        //canvas.setAttributeNode(att);
+        canvas.setAttributeNode(att);
+        
+        att = document.createAttribute("touchmove");
+        att.value = "getPos(event)";
+        canvas.setAttributeNode(att);
 
         att = document.createAttribute("onclick");
         att.value = "sendColor(event)";
